# PENE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: ci.yml
Addcount/: Addcount.cpp  CMakeLists.txt  Filters.cpp  counters.cpp  counters.h  counters_module.h  module.h  version.h  version_module.cpp  version_module.h
PinTools-master/: .gitignore
PinTools-master/PinToolsCmake/: CMakeLists.txt
PinTools-master/PinToolsCmake/Addcount/: Addcount.h  CMakeLists.txt  counters.h  module.h  version.h  version_module.cpp
PinTools-master/PinToolsCmake/SamplePinTool/: CMakeLists.txt  SamplePinTool.cpp  interflop_wrappers.h
PinTools-master/PinToolsCmake/SamplePinTool/backends/: ieee.h  opposite_ieee.cpp
PinTools-master/PinToolsCmake/SamplePinTool/includes/: Filters.h  interflop.h
PinTools-master/PinToolsCmake/SamplePinTool/internals/: interflop_avx512_wrapper.h  interflop_avx_wrapper.h  interflop_x87_wrapper.h
PinTools-master/PinToolsCmake/cmake/modules/: CommonConfig.cmake  CommonVars.cmake  FindPIN.cmake  UnixVars.cmake  WindowsConfig.cmake  WindowsVars.cmake
PinTools-master/PinToolsCmake/cmake/resources/: CMakeLists.txt.Pin
PinTools-master/PinToolsCmake/sampleprog/: MyPinToolunittest.py  ref.txt
PinTools-master/PinToolsCmake/sampleprog/sampleprog/: sampleprog.sln
SamplePinTool/: CMakeLists.txt  fp_instruction_count.h  version.h
SamplePinTool/backends/: ieee.cpp  opposite_ieee.h
SamplePinTool/includes/: defs.h
SamplePinTool/internals/: interflop_avx512_wrapper.h  interflop_functions_wrapper.h  interflop_sse_wrapper.h
Test/: basicunittest.py  versionref.txt
Test/cpp_unit/: CMakeLists.txt
Test/cpp_unit/utils/: match_test.cpp
Test/functionnal_tests/: CMakeLists.txt  test_version.cpp  test_version.py.in  test_version_reference_inactive.txt
Test/sampleprog/: CMakeLists.txt  sampleprog.cpp
Test/sampleprog/sampleprog/: sampleprog.cpp
Test/test_backend/: CMakeLists.txt  ex3.cpp  test_all.py  test_backend.py
Test/test_backend/Apps/: ex1.cpp  ex2.cpp  test_backend_executable1.cpp  test_backend_executable2.cpp  test_backend_executable3.cpp
Test/test_backend_verrou/: CMakeLists.txt  test_add_sd.cpp  test_verrou.py  test_verrou_executable.cpp
Test/test_counters/: CMakeLists.txt  testCounterGenerator.py  test_cmp_counters.py  test_counters.py  test_counters_executable.cpp  test_counters_reference_active.txt  test_counters_reference_add_double_scalar.txt  test_counters_reference_add_double_simd.txt  test_counters_reference_add_float_scalar.txt  test_counters_reference_add_float_simd.txt  test_counters_reference_default.txt  test_counters_reference_div_double_scalar.txt  test_counters_reference_div_double_simd.txt  test_counters_reference_div_float_scalar.txt  test_counters_reference_div_float_simd.txt  test_counters_reference_fma_double_scalar.txt  test_counters_reference_fma_double_simd.txt  test_counters_reference_fma_float_scalar.txt  test_counters_reference_fma_float_simd.txt  test_counters_reference_inactive.txt  test_counters_reference_loop.txt  test_counters_reference_mul_double_scalar.txt  test_counters_reference_mul_double_simd.txt  test_counters_reference_mul_float_scalar.txt  test_counters_reference_mul_float_simd.txt  test_counters_reference_result.txt  test_cvt_counters.py  test_flags.py  test_instruction_counters.py  test_instruction_counters_tls.py  test_oth_counters.py  test_trace_counters.py  test_trace_counters_tls.py
Test/test_filters/: CMakeList.txt  CMakeLists.txt  excl_double.lst  excl_shared.lst  excl_shared_all.lst  excl_shared_double.lst  executable.cpp  header.h  shared_fun.cpp  test_excl_tree_func_f.lst  test_filters.py
Test/test_replace/: CMakeLists.txt  replace.cpp  test_replace.py
Test/test_replace_avx/: CMakeLists.txt  replace.cpp  test_replace_avx.py
Test/test_symbol_list_generator/: CMakeLists.txt  executable.cpp  shared2_funs.cpp  shared2_funs.h  shared_funs.cpp  shared_funs.h  test_symbol_list_generator.py
Test/test_version/: CMakeLists.txt  test_version.py  test_version.py.in  test_version_reference_active.txt  test_version_reference_inactive.txt
Test/version_module/: CMakeLists.txt  reference_active.txt  reference_inactive.txt  test_version_module.py.in
benchmark/: gauss.cpp
cmake/generics/: GenericConfigureFile.cmake
cmake/modules/: CommonVars.cmake  FindPIN.cmake  UnixConfig.cmake  UnixVars.cmake  WindowsConfig.cmake  WindowsVars.cmake
cmake/resources/: CMakeLists.txt.Pin  CMakeLists.txt.gtest
cmake/tools/: stderr2stdout.py  unittest_explore.py
code_gen/: CMakeLists.txt  generator.py
code_gen/templates/: sse_avx_template.txt  wrapper_template.txt
code_generator/: CMakeLists.txt  generator.py
code_generator/templates/: wrapper_template.txt
include/: counters.h  counters_module.h  counters_utils.h  extern_file.h  interflop_module.h  logger_module.h  module.h  replace_module.h  symbol_list_generator_module.h  utils.h  version_module.h
include/pin_utils/: element_instrumenter.h  filter.h  insert_call.h  instrumenter.h  source_filter.h  symbol_filters.h  tls.h  tls_reg.h  traits.h
include/replace/backend/: double2float.h  ieee.h  invert_add_mul_impl.h  test_backend.h
include/replace/backend/backend_verrou/: dietzfelbingerHash.hxx  interflop_verrou.h  multiplyShiftHash.hxx  vr_fma.hxx  vr_isNan.hxx  vr_nextUlp.hxx  vr_op.hxx  vr_rand.h  vr_rand_implem.h  vr_roundingOp.hxx
include/replace/wrappers/: avx.h  avx512.h  sse.h  vfc_avx.h  vfc_sse.h  vfc_wrapper_avx.h  vfc_wrapper_sse.h
include/utils/: copy_register.h  match.h  move.h  safe_get_line.h
src/: CMakeLists.txt  counters.cpp  counters.h  counters_module.cpp  interflop_module.cpp  logger_module.cpp  module.cpp  module.h  pene.cpp  replace_module.cpp  symbol_list_generator_module.cpp  update_counters.cpp  version_module.cpp  version_module.h
src/pin_utils/: element_instrumenter.cpp  filter.cpp  instrumenter.cpp  source_filter.cpp  symbol_filter.cpp
src/replace/backend/backend_verrou/: interflop_verrou.cpp  test_main.cxx
src/utils/: match.cpp
(+2 files in other folders)
